02/10/2023. Commit 8. Se completa el proyecto

--- a/tema-02/proyectos/01-calculadora/index.html
+++ b/tema-02/proyectos/01-calculadora/index.html
@@ -53,6 +53,7 @@
                     <button type="submit" class="btn btn-success " formaction="restar.php">Resta</button>
                     <button type="submit" class="btn btn-primary " formaction="multiplicar.php">Producto</button>
                     <button type="submit" class="btn btn-danger " formaction="dividir.php">Dividir</button>
+                    <button type="submit" class="btn btn-dark " formaction="potenciacion.php">Potencia</button>
                     
                 </div>
 
